--- a/css/styles.css
+++ b/css/styles.css
@@ -68,18 +68,18 @@ ul{
 .container{
     margin:0 auto;
     width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
     outline: 2px solid red;
    
 }
 
 .logo{ 
-    color: var(--color-logo);
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration:none;
+color: var(--color-logo);
+font-family: 'Raleway', sans-serif;
+font-size: 26px;
+line-height: 1.19;
+text-decoration:none;
+margin-left: 0px;
+display: block;
 }
 .logo-blue{ 
     color: var(--accent-color);
@@ -96,11 +96,19 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 text-decoration:none;
+margin-left: 50px;
+padding-top: 32px;
+padding-bottom: 32px;
+
+
+
+
 }
 .site-nav {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    
+
 }
 .site-nav .link:hover, 
 .site-nav .link:focus{
@@ -116,6 +124,8 @@ font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 text-decoration:none;
+display: block;
+
 }
 .auth-nav:hover,
 .auth-nav:focus{
@@ -127,7 +137,8 @@ text-decoration:none;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em
+    letter-spacing: 0.02em;
+    display: block;
 }
 .tel:hover ,
 .tel:focus{
@@ -135,23 +146,28 @@ text-decoration:none;
 }
 
 .page-header{
-    color: var(--title-text-color);
-    text-decoration:none;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    height: 80px;
+color: var(--title-text-color);
+text-decoration:none;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+
   }
 .header-nav{
  display: flex;
 flex-wrap: wrap;
 align-items: center;
-justify-content: space-around;
+
+
+
 }
 .header-auth{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap:50px;
+ display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-left: auto;
+gap: 50px;
+  
 }
 .page-header:hover, 
 .page-header:focus {
@@ -159,15 +175,11 @@ justify-content: space-around;
 }
 /* sections */
 .decision{
- display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-  background-color: var(--footer-color);  
-  text-align: center;
-  height: 600px;
-  
-  
+background-color: var(--footer-color);  
+text-align: center;
+padding-top:200px;
+padding-bottom: 280px;
+
 
 }
 .decision-title{
@@ -177,9 +189,11 @@ line-height: 1.36;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: var(--primari-text-color);
+align-items: center;
 max-width: 696px;
-max-height: 120px;
 margin-bottom: 40px;
+margin: 0%auto;
+
 
 
 }
@@ -195,8 +209,12 @@ letter-spacing: 0.06em;
 font-family: inherit;
 border-radius: 4px;
 border-color: transparent;
-max-width: 216px;
-margin: 0 auto;
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 32px;
+padding-right: 32px;
+
+
 
 }
 .button:hover ,button:focus{
@@ -208,6 +226,7 @@ features sections */
 .sections{
     background-color: var(--primari-text-color);
     padding-top: 94px;
+    padding-bottom: 94px;
     
 }
 
@@ -218,7 +237,7 @@ font-size: 36px;
 line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
-padding-bottom: 50px;
+margin-bottom: 50px;
 
 }
 .sections-title{
@@ -280,8 +299,7 @@ margin-bottom: 50px;
 .team-board{
 display: flex;
 gap: 30px;   
-width: calc((100%-90px)/4); 
-height: 368px;
+width: calc((100% - 90px)/ 4); 
 }
 .team-line{
     color: var(--title-info-kolor);
@@ -294,12 +312,15 @@ letter-spacing: 0.03em;
     background-color: var(--primari-text-color);
     
 }
+.team-font{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 .team-title{
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
    font-weight: 500;
-   margin-top: 30px;
    margin-bottom: 10px;
 }
 
@@ -331,7 +352,7 @@ font-style: normal ;
 }
 .footer-tel{
  margin-top: 9px;
- margin-bottom: 60px;
+ 
 
 }
 
@@ -342,17 +363,15 @@ line-height:1.71;
 letter-spacing: 0.03em;
 text-decoration:none;
 font-style: normal;
-margin-top: 20px;
 margin-bottom: 9px;
+
 }
 .footer-adress:hover
 .footer-adress:focus{
     
 }
-.footer-link{
-    margin-top: 20px;
-    margin-bottom: 9px;
-}
+
+
 .visually-hidden {
     position: absolute;
      white-space: nowrap;
@@ -374,17 +393,18 @@ margin-bottom: 9px;
 .portfolio-nav{
 display: flex;
 flex-wrap: wrap;
-align-items: center;
-justify-content: space-around;
+
+
+
 }
 .portfolio-auth{
 display: flex;
 flex-wrap: wrap;
-align-items: center;
+margin-left: auto;
 gap:50px;
 }
 .page-header{
-    display: flex;
+
 }
 .button-portfolio{
     color: var(--title-text-color);
@@ -398,6 +418,11 @@ gap:50px;
     font-family: inherit;
     border-radius: 4px;
 border-color: transparent;
+padding-top: 6px;
+padding-bottom: 6px;
+padding-left: 22px;
+padding-right: 22px;
+
 }
 .button-portfolio:hover,
 .button-portfolio:focus{
@@ -411,8 +436,16 @@ margin-bottom: 56px;
 flex-direction: row;
 justify-content: center;
 gap: 30px;
-
-   
+  
+}
+.services-type{
+    padding-top: 24px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border-left: 1px solid #EEEEEE;;
+    border-right: 1px solid #EEEEEE;;
+    border-bottom: 1px solid #EEEEEE;;
 }
 .services{
     display: flex;
@@ -439,11 +472,13 @@ gap: 30px;
     line-height: 2;
     letter-spacing: 0.06em;
 }
-
+.adres{
+    margin-top: 30px;
+}
 .footer{
-    background-color: var(--footer-color);
-   padding-top: 60px;
-   padding-bottom: 60px;
+background-color: var(--footer-color);
+padding-top: 60px;
+padding-bottom: 60px;
 }
 .logo-black{
 color: var(--primari-text-color);
@@ -453,5 +488,6 @@ font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 text-decoration: none;
+margin-bottom: 20px;
 
 }
